@@ -1,6 +1,7 @@
 CHANGES
 doc/fsck-notes.txt
 doc/memcache-support.txt
+doc/pluggable-replication-policies.txt
 doc/testing.txt
 lib/mogdeps/Danga/Socket.pm
 lib/mogdeps/Gearman/Client.pm
