@@ -10,7 +10,7 @@ use MogileFS::Server;
 use MogileFS::Util qw(error_code);
 require "$Bin/lib/mogtestlib.pl";
 
-plan tests => 30;
+plan tests => 31;
 
 my $obj;
 
@@ -18,6 +18,10 @@ $obj = MogileFS::ReplicationPolicy->new_from_policy_string("MultipleHosts(5)");
 isa_ok($obj, "MogileFS::ReplicationPolicy::MultipleHosts", "got a multiple hosts policy")
     or die "can't proceed";
 is($obj->mindevcount, 5, "got correct devcount");
+
+$obj = MogileFS::ReplicationPolicy->new_from_policy_string("MultipleHosts()");
+isa_ok($obj, "MogileFS::ReplicationPolicy::MultipleHosts", "got a multiple hosts policy")
+    or die "can't proceed";
 
 foreach my $str ("Union(MultipleHosts(5), MultipleHosts(2))",
                  "Union(MultipleHosts(5), MultipleHosts(2), )",
